--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Curso CSS3 Avancado</title>
+        <title>Pizzaria Melhor Sabor</title>
         <meta name="viewport" content="width=device-width">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         
