--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>      
         <nav>
-            <img src="img/logo-pizzaria-grande.png">
+            <img src="" alt="">
             <ul id="menu-desktop">
                 <li><a href="">PIZZAS</a></li>
                 <li><a href="">MEUS PEDIDOS</a></li>
